added a dynamic page of myReservations, created a new entity Reservations and new service for reservations